--- a/.github/workflows/static-guard.yml
+++ b/.github/workflows/static-guard.yml
@@ -3,6 +3,10 @@ name: Static Guard
 on:
   push:
   pull_request:
+  workflow_dispatch:  # ← gør det muligt at starte manuelt fra Actions
+
+permissions:
+  contents: read
 
 jobs:
   guard:
